--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script defer src="js/actions.js"></script>
+    <script src="https://kit.fontawesome.com/af7b1c59ab.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -28,8 +29,8 @@
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="#">Consejos de uso</a></li>
-                <li><a href="#">Preguntas frecuentes</a></li>
+                <li><a href="consejos.html">Consejos de uso</a></li>
+                <li><a href="faq.html">Preguntas frecuentes</a></li>
             </ul>
         </header>
         <section id="container-slider">
@@ -45,78 +46,199 @@
             <ul id="slider">
                 <li style="background-image: url(img/slide-01.jpg); z-index: 0; opacity: 1;">
                     <div>
-                        <h2>No dejes que una ampolla o herida te detenga.</h2>
+                        <h2 data-aos="zoom-in" class="center-text">
+                            <img src="img/logo-duoderm.png" class="responsive" alt="Duoderm Extra Thin Spots">
+                            <br>No dejes que una ampolla
+                            <br>o herida te detenga
+                        </h2>
                     </div>
                 </li>
                 <li style="background-image: url(img/slide-02.jpg);">
                     <div>
-                        <h2>No dejes que una ampolla o herida te detenga</h2>
+                        <h2 class="center-text"><img src="img/logo-duoderm.png" class="responsive" alt="Duoderm Extra Thin Spots">
+                            <br>No dejes que una ampolla
+                            <br>o herida te detenga
+                        </h2>
                     </div>
                 </li>
                 <li style="background-image: url(img/slide-03.jpg);">
                     <div>
-                        <h2>No dejes que una ampolla o herida te detenga</h2>
+                        <h2 class="center-text"><img src="img/logo-duoderm.png" class="responsive" alt="Duoderm Extra Thin Spots">
+                            <br>No dejes que una ampolla
+                            <br>o herida te detenga
+                        </h2>
                     </div>
                 </li>
                 <li style="background-image: url(img/slide-04.jpg);">
                     <div>
-                        <h2>No dejes que una ampolla o herida te detenga</h2>
+                        <h2 class="center-text"><img src="img/logo-duoderm.png" class="responsive" alt="Duoderm Extra Thin Spots">
+                            <br>No dejes que una ampolla
+                            <br>o herida te detenga
+                        </h2>
                     </div>
                 </li>
                 <li style="background-image: url(img/slide-05.jpg);">
                     <div>
-                        <h2>No dejes que una ampolla o herida te detenga</h2>
+                        <h2 class="center-text"><img src="img/logo-duoderm.png" class="responsive" alt="Duoderm Extra Thin Spots">
+                            <br>No dejes que una ampolla
+                            <br>o herida te detenga
+                        </h2>
                     </div>
                 </li>
             </ul>
         </section>
-        <section id="video">
-            <div class="video-responsive max-width">
+        <section class="section-background" id="video">
+            <div class="video-responsive section-max-width">
                 <iframe src="https://www.youtube.com/embed/Wt2p1kEWbw8" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
         </section>
-        <section id="caracteristicas">
+        <section class="section-max-width" id="caracteristicas">
             <div class="center-text">
                 <h2 data-aos="fade-up">Características</h2>
-                <img data-aos="fade-up" src="img/caja-duoderm.png" alt="Duoderm">
-                <h3data-aos="fade-up" >Conoce todo lo que Duoderm tiene para mejorar tus actividades</h3>
+                <img data-aos="fade-up" class="responsive" src="img/caja-duoderm.png" alt="Duoderm">
+                <h2 data-aos="fade-up" >Conoce todo lo que Duoderm tiene para mejorar tus actividades</h2>
             </div>
-            <div class="fila center-text">
-                <div class="columna">
-                    <img src="img/icono-medidas-adecuadas.png" alt="Medidas adecuadas">
+            <div id="caracteristicas-lista" class="center-text">
+                <div class="caracteristica section-background" data-aos="flip-left">
+                    <img class="responsive" src="img/icono-medidas-adecuadas.png" alt="Medidas adecuadas">
                     <h2 class="upper">Medidas adecuadas</h2>
                     <p>Ayuda a cubrir las heridas superficiales como cortaduras, ampollas, callos, juanetes y
                         raspaduras. (4.4 x 3.8 cm)</p>
                 </div>
-                <div class="columna">
-                    <img src="img/icono-impermeable-al-agua.png" alt="Impermeable al agua">
+                <div class="caracteristica section-background" data-aos="flip-left">
+                    <img class="responsive" src="img/icono-impermeable-al-agua.png" alt="Impermeable al agua">
                     <h2 class="upper">Impermeable al agua</h2>
                     <p>No se despega fácilmente al contacto con el agua, ni con el roce de la ropa, por lo que la herida
                         estará protegida al bañarse o para cualquier otra actividad</p>
                 </div>
-                <div class="columna">
-                    <img src="img/icono-adaptable-al-cuerpo.png" alt="Adaptable al cuerpo">
+                <div class="caracteristica section-background" data-aos="flip-left">
+                    <img class="responsive" src="img/icono-adaptable-al-cuerpo.png" alt="Adaptable al cuerpo">
                     <h2 class="upper">Adaptable al cuerpo</h2>
                     <p>Altamente flexible y adaptable a cualquier parte del cuerpo</p>
                 </div>
-                <div class="columna">
-                    <img src="img/icono-proteccion-bacteriana.png" alt="Protección bacteriana">
+                <div class="caracteristica section-background" data-aos="flip-left">
+                    <img class="responsive" src="img/icono-proteccion-bacteriana.png" alt="Protección bacteriana">
                     <h2 class="upper">Protección bacteriana</h2>
                     <p>Brinda una barrera contra virus y bacterias</p>
                 </div>
-                <div class="columna">
-                    <img src="img/icono-durable-y-seguro.png" alt="Durable y seguro">
+                <div class="caracteristica section-background" data-aos="flip-left">
+                    <img class="responsive" src="img/icono-durable-y-seguro.png" alt="Durable y seguro">
                     <h2 class="upper">Durable y seguro</h2>
                     <p>Uso hasta por 7 días<br>* Dependiendo del exudado de la herida</p>
                 </div>
             </div>
-            <h3>Sigue disfrutando de cualquier momento con Duoderm Spots, no dejes que una pequeña herida detenga tus
-                pasos.</h3>
         </section>
+        <section class="section-max-width">
+            <h3 data-aos="fade-up">Sigue disfrutando de cualquier momento con Duoderm Spots, no dejes que una pequeña herida detenga tus
+                pasos.</h3>
+            <div id="recuadros-lista">
+                <div class="recuadro">
+                    <div data-aos="fade-up-right" class="foto" style="background-image: url(img/attr-no-detengas-tus-pasos.jpg);"></div>
+                    <div data-aos-delay="200" data-aos="fade-left" class="titulo">
+                        <h3>No detengas tus pasos</h3>
+                    </div>
+                    <div data-aos-delay="300" data-aos="fade-left" class="cuerpo">
+                        <p>Cuando el zapato lastima tu pie Duoderm te puede ayudar reduciendo de forma inmediata la fricción del calzado con la piel y con ello evitar esas molestas rozaduras que acaban en ampolla o en herida.</p>
+                        <p>Es muy cómodo de usar, solo tienes que poner sobre las zonas donde se prevé que puede rozar el calzado.</p>
+                    </div>
+                </div>
+                <div class="recuadro">
+                    <div data-aos="fade-up-left" class="foto" style="background-image: url(img/attr-que-tus-zapatos.jpg);"></div>
+                    <div data-aos-delay="200" data-aos="fade-left" class="titulo">
+                        <h3>Que tus zapatos no arruinen ningún momento</h3>
+                    </div>
+                    <div data-aos-delay="300" data-aos="fade-left" class="cuerpo">
+                        <p>Duoderm cuenta con una avanzada tecnología para cuidar la piel en esos momentos en los que los zapatos nuevos dejan su huella.</p>
+                        <p>Su diseño, se ajusta perfectamente a la zona y ayuda a una curación más rápida en caso de que la piel se haya lesionado.</p>
+                    </div>
+                </div>
+                <div class="recuadro">
+                    <div data-aos="fade-up-right" class="foto" style="background-image: url(img/attr-que-las-ampollas.jpg);"></div>
+                    <div data-aos-delay="200" data-aos="fade-left" class="titulo">
+                        <h3>Que las ampollas no te detengan</h3>
+                    </div>
+                    <div data-aos-delay="300" data-aos="fade-left" class="cuerpo">
+                        <p>Las ampollas por fricción son muy comunes, son dolorosas e incómodas. En caso de que la ampolla ya haya aparecido, lo principal en el tratamiento de las ampollas es impedir que se agrave la lesión, reducir la incomodidad, promover la curación y prevenir la infección.</p>
+                        <p>Duoderm Spots crean un ambiente de curación óptimo:</p>
+                        <ul>
+                            <li>Protegen la zona para evitar la fricción, calmando el dolor.</li>
+                            <li>Absorben el exceso de fluido, lo que ayuda a acelerar el proceso de curación de la ampolla.</li>
+                            <li>Duoderm, se adhiere muy bien a la piel, de forma que te puedes bañar con él. Es flexible y adaptable a distintas zonas según donde esté la ampolla o lesión.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="recuadro">
+                    <div data-aos="fade-up-left" class="foto" style="background-image: url(img/attr-que-las-heridas.jpg);"></div>
+                    <div data-aos-delay="200" data-aos="fade-left" class="titulo">
+                        <h3>Que las heridas no detengan tu día</h3>
+                    </div>
+                    <div data-aos-delay="300" data-aos="fade-left" class="cuerpo">
+                        <p>Cuando existe una lesión en la piel ya sea por algún corte, fricción o presión esto puede detener tu día, con Duoderm proteges la piel lastimada y al mismo tiempo ayuda a acelerar su curación.</p>
+                        <p>Ya sea por la fricción al correr un maratón, o por alguna cortada en la cocina, Duoderm es tu aliado.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-background">
+            <div class="center-text">
+                <h2 data-aos="fade-up">Encuentra nuestros productos en</h2>
+                <p data-aos="fade-up" class="max-width-400 margin-vertical">
+                    <img class="responsive" src="img/encuentras-logo-farmacias-del-ahorro.png" alt="Farmacias del Ahorro">
+                </p>
+                <p data-aos="fade-up" class="max-width-400 mv2 margin-vertical">
+                    <a href="https://www.farmaciasanpablo.com.mx/equipo-y-botiquin/material-de-curacion/parches-y-telas-adhesivas/duoderm-apositos-adhesivos-4-4-cm-x-3-8-cm-para-adulto/p/000000000070001633" target="blank">
+                        <img class="responsive" src="img/encuentras-logo-san-pablo-farmacias.png" alt="San Pablo Farmacias">
+                    </a>
+            </p>
+            </div>
+        </section>
+        <section id="otros">
+            <div id="productos-list" class="section-max-width">
+                <a data-aos="flip-left" class="producto" href="https://duodermkids.com/" target="blank">
+                    <img class="responsive" src="img/productos-duoderm-kids.png" alt="Duoderm Kids">
+                    <div class="cuerpo">
+                        <p>Duoderm Kids, aceleran la curación de raspaduras y heridas. ¡La mejor opción para proteger y sanar las raspaduras, cortadurasy heridas superficiales del día a día de los niños! Son cómodos, fáciles de colocar, a prueba de agua.</p>
+                    </div>
+                    <div class="boton">Conoce más</div>
+                </a>
+                <a data-aos="flip-left" class="producto" href="https://safgel.mx/" target="blank">
+                    <img class="responsive" src="img/productos-saf-gel.jpg" alt="Saf-Gel">
+                    <div class="cuerpo">
+                        <p>Este gel tiene un mecanismo de acción que ayuda a la reparación, regeneración y cicatrización de la piel en heridas como: quemaduras en casa, cortaduras, raspaduras, lesiones en la piel.</p>
+                    </div>
+                    <div class="boton">Conoce más</div>
+                </a>
+            </div>
+        </section>
+        <section id="contactanos" class="section-background center-text">
+            <h2>Contáctanos</h2>
+            <p>Conoce más acerca de nuestros productos</p>
+            <form action="#" id="contacto">
+                <p><input type="text" name="form-nombre" placeholder="Nombre"></p>
+                <p><input type="text" name="form-correo" placeholder="Correo"></p>
+                <p><input type="text" name="form-telefono" placeholder="Teléfono"></p>
+                <p><textarea name="form-mensaje" id="" cols="30" rows="10" placeholder="Mensaje"></textarea></p>
+                <p><button type="submit">Enviar</button></p>
+            </form>
+        </section>
+        <footer class="center-text">
+            <img src="img/logo-convatec.png" alt="" class="responsive max-width-200">
+            <ul class="redes-sociales">
+                <li><a target="blank" href="https://www.facebook.com/Duoderm-Adulto-109220840983922"><i class="fa-2xl fa-brands fa-facebook"></i></a></li>
+                <li><a target="blank" href="https://www.instagram.com/duodermspots/"><i class="fa-2xl fa-brands fa-instagram"></i></a></li>
+                <li><a target="blank" href="https://www.youtube.com/channel/UCrCBHqWaE8avQ5I19dgC8IQ"><i class="fa-2xl fa-brands fa-youtube"></i></a></li>
+            </ul>
+            <p><a href="aviso-de-privacidad.html">Aviso de privacidad</a></p>
+            <small>
+                <p>Todos los derechos reservados.</p>
+                <p>Permiso de Publicidad COFEPRIS No. 203300202C5865
+                    <br>Productos registrados ante Secretaria de Salud mediante COFEPRIS, para consultar el número de registro y vigencia deberá ponerse en contacto con Boston Medical Device de México S. de R.L. de C.V. al número 01 800 8364871 o al correo electrónico calidadmexico@convatec.com</p>
+            </small>
+        </footer>
     </div>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
