--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,9 @@
     <div id="canvas">
         <header class="top-nav">
             <div class="logo">
-                <img class="responsive" src="img/logo-convatec.png" alt="Convatec">
-            </div>
+                <a href="./">
+                    <img class="responsive" src="img/logo-convatec.png" alt="Convatec">
+                </a>            </div>
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
                 <div class='menu-button'></div>
